--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header class="pb-5 ">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
+                <div class="container-fluid ">
                   <a class="navbar-brand" href="#">
-                      <img class="img-fluid"  src="logo/logo.png"  alt="">
+                      <img class="img-fluid"  src="logo/Logo.png"  alt="">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,16 +28,16 @@
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav  ">
                       <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link card-ptext fw-bold" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Product</a>
+                        <a class="nav-link card-ptext fw-bold" href="#">Product</a>
                       </li>
                       <li class="nav-item px-3">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link card-ptext fw-bold" href="#">About Us</a>
                       </li>
                       <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link card-ptext fw-bold" href="#">Contact us</a>
                       </li>
                     </ul>
                   </div>
@@ -70,8 +70,8 @@
        <div class="mt-5 mb-5">
          <h1 class="mb-5 text-uppercase fw-bold title_color titlee-center">CASUAL SHOES</h1>
          <div class="row">
-          <div class="col-md-4">
-            <div class="card h-100 shadow card_radius p-3">
+          <div class="col-md-4 mb-5">
+            <div class="card h-100 shadow card_radius p-3 ">
               <img src="image/image 5.png" class="card-img-top card-bg p-4" alt="...">
               <div class="card-body">
                 <h4 class="card-title fw-bold text-roboto text-blue ">Nike Shoe</h4>
@@ -84,7 +84,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-5">
             <div class="card h-100  shadow card_radius p-3 ">
               <img src="image/Daco_1703273 1.png" class="card-img-top card-bg p-4" alt="...">
               <div class="card-body">
@@ -98,7 +98,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-5">
             <div class="card h-100 shadow card_radius p-3 ">
               <img src="image/pngegg 1.png" class="card-img-top card-bg p-4" alt="...">
               <div class="card-body">
@@ -122,7 +122,7 @@
         <div class="mt-5 mb-5">
           <h2 class="mb-5 text-uppercase fw-bold title_color titlee-center">Formal shoes</h2>
           <div class="row">
-           <div class="col-md-4">
+           <div class="col-md-4 mb-5">
              <div class="card h-100 shadow card_radius p-3">
                <img src="image/Mask Group.png" class="card-img-top" alt="...">
                <div class="card-body">
@@ -136,7 +136,7 @@
                </div>
              </div>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-4 mb-5">
              <div class="card h-100 shadow card_radius p-3 ">
                <img src="image/Rectangle 38.png" class="card-img-top" alt="...">
                <div class="card-body">
@@ -150,7 +150,7 @@
                </div>
              </div>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-4 mb-5">
              <div class="card h-100 shadow card_radius p-3 ">
                <img src="image/Rectangle 39.png" class="card-img-top" alt="...">
                <div class="card-body">
@@ -174,7 +174,7 @@
           <div class="row freaturs-order ">
             <div class="col-md-6">
               <div class="freaturs flx-direction card_radius shadow m-3 p-3 d-flex">
-               <div class="col-md-3">
+               <div class="col-md-3 mb-4">
                  <img src="logo/image 12.png" alt="">
                </div>
                <div class="col-md-9 ">
@@ -185,7 +185,7 @@
               </div>
 
               <div class="freaturs flx-direction card_radius shadow m-3 p-3 d-flex">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <img class="img-fluid" src="logo/image 13.png" alt="">
                 </div>
                 <div class="col-md-9 ">
@@ -196,7 +196,7 @@
                </div>
 
                <div class="freaturs flx-direction card_radius  shadow m-3 p-3 d-flex">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4">
                   <img src="logo/image 14.png" alt="">
                 </div>
                 <div class="col-md-9 ">
@@ -206,15 +206,39 @@
                 </div>
                </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-5">
               <img src="logo/XMLID 1.png"  class="img-fluid mt-5 pt-5" alt="">
             </div>
           </div>
         </div>
       </section>
-
-
 </main>
+
+<footer class="pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h2 class="text-uppercase fw-bold title_color" >Penguin Fashion</h2>
+        <p class="card-ptext" >A beautiful landing page template by Codefest.</p>
+      </div>
+
+      <div class="col-md-4">
+        <h2 class="text-uppercase fw-bold title_color" >Contact Us</h2>
+        <p class="card-ptext"><i class="fas fa-map-marker"></i> 123 Business Centre
+          London</p>
+          <p class="card-ptext"><i class="fas fa-phone-alt "></i> 0123456789</p>
+          <p class="card-ptext"><i class="fas fa-envelope"></i> mail@domain.com</p>
+      </div>
+      <div class="col-md-4">
+        <h2 class="text-uppercase fw-bold title_color" >Socials </h2>
+        <a href="#"><i class="fab fa-facebook-square text-white"></i></a>
+        <a href="#"><i class="fab fa-twitter-square text-white"></i></a>
+        <a href="#"><i class="fab fa-instagram-square text-white"></i></a>
+      </div>
+    </div>
+  </div>
+  <p class="text-center pt-5 mt-5 title_color">© 2021 All Rights Reserved</p>
+</footer>
 
 
 
